# X_twitter_api_v2_demo

./: .gitignore  README.md  example.env  main.py  oauth1.py  pyproject.toml  tweet.py
templates/: index.html
x_twitter_api_v2_demo/: auth.py  media.py  session.py  tweet.py  utils.py
