[tool.poetry]
name = "twitter-api-v2-demo"
version = "0.1.0"
description = "A demo illustrating how to tweet via X's new Twitter v2 API using Python Flask"
authors = ["Christopher Carroll Smith <75859865+chriscarrollsmith@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests-oauthlib = "^1.3.1"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
tweepy = "^4.14.0"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
