[project]
name = "x-twitter-api-v2-demo"
version = "0.1.0"
description = "A demo illustrating how to tweet via X's new Twitter v2 API using Python Flask"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.1",
    "requests-oauthlib>=1.3.1",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
    "fastapi>=0.115.6",
    "python-multipart>=0.0.20",
    "jinja2>=3.1.5",
]
